# bevy_demos

./: .gitignore  Cargo.toml  README.md  deny.toml  flake.nix  rust-toolchain.toml
.github/workflows/: ci.yaml  rust.yaml
nix/: devShells.nix
spinning_cube/: Cargo.toml
spinning_cube/src/: main.rs
